--- a/karting/index.html
+++ b/karting/index.html
@@ -19,14 +19,20 @@
                 <li><a href="/inicio/index.html">Inicio</a></li>
                 <li><a href="/tarifas/index.html">Tarifas</a></li>
                 <li><a href="/horarios/index.html">Horarios</a></li>
-                <li><a href="/pistas/index.html">Pistas</a></li>
+                <li><a href="/karting/index.html">Karting</a></li>
                 <li><a href="/reservar/index.html">Reservar</a></li>
            </ul>           
         </nav>
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
 
-
+    <div class="info">
+        <h2>Circuitos Karting</h2>
+        <p>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></p>
+    </div>
+    <section class="circuitos">
+        <h2>Echa un vistazo a nuestros centros de Karting y sus trazados!</h2>
+    </section>
     <footer>
         <img src="../img/logo2.png">
         <hr>
