--- a/tarifas/index.html
+++ b/tarifas/index.html
@@ -19,7 +19,7 @@
                 <li><a href="/inicio/index.html">Inicio</a></li>
                 <li><a href="/tarifas/index.html">Tarifas</a></li>
                 <li><a href="/horarios/index.html">Horarios</a></li>
-                <li><a href="/pistas/index.html">Pistas</a></li>
+                <li><a href="/karting/index.html">Karting</a></li>
                 <li><a href="/reservar/index.html">Reservar</a></li>
            </ul>           
         </nav>
