Esquema de Karting

--- a/inicio/index.html
+++ b/inicio/index.html
@@ -21,7 +21,9 @@
                 <li><a href="/horarios/index.html">Horarios</a></li>
                 <li><a href="/karting/index.html">Karting</a></li>
                 <li><a href="/reservar/index.html">Reservar</a></li>
-           </ul>           
+                <li><a href="/eventos/index.html">Reservar</a></li>
+                <li><a href="/contactanos/index.html">Reservar</a></li>
+           </ul>             
         </nav>
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
