--- a/reservar/index.html
+++ b/reservar/index.html
@@ -27,7 +27,29 @@
     </header>
 
 
+    <div id="ini"> <p>Actividades y Precios</p>
+        <div id="nom1"> Eventos<!--Empresa, cumples, carreras, (min 8 personas)-->
+            <div id="eventos">
+                    <div id="empresa" class="cajaeve">
+                        <p id="boton"> de Empresa</p>
+                    </div>
+                    <div id="cumpleaños" class="cajaeve">
+                        <p id="boton"> de cumpleaños</p>
 
+                    </div>
+                    <div id="carrera" class="cajaeve">
+                        <p id="boton"> de carrera</p>
+
+                    </div>
+                </div>
+            </div>
+        <div id="nom2"> Individual
+            <div id="indiv">
+                <div id="senior" class="cajain">a</div>
+                <div id="junior" class="cajain">b</div>
+            </div>
+            </div>
+    </div>
 
 
 
