--- a/reservar/index.html
+++ b/reservar/index.html
@@ -27,23 +27,23 @@
     </header>
 
 
-    <div id="ini"> <p>Actividades y Precios</p>
-        <div id="nom1"> Eventos<!--Empresa, cumples, carreras, (min 8 personas)-->
+    <div id="ini"> <h1>Actividades y Precios</h1>
+        <div id="nom1"> <h2>Eventos</h2><!--Empresa, cumples, carreras, (min 8 personas)-->
             <div id="eventos">
                     <div id="empresa" class="cajaeve">
-                        <p id="boton"> de Empresa</p>
+                        <p id="boton">Empresa</p>
                     </div>
                     <div id="cumpleaños" class="cajaeve">
-                        <p id="boton"> de cumpleaños</p>
+                        <p id="boton">Cumpleaños</p>
 
                     </div>
                     <div id="carrera" class="cajaeve">
-                        <p id="boton"> de carrera</p>
+                        <p id="boton">Carrera</p>
 
                     </div>
                 </div>
             </div>
-        <div id="nom2"> Individual
+        <div id="nom2"> <h2>Individual</h2>
             <div id="indiv">
                 <div id="senior" class="cajain">a</div>
                 <div id="junior" class="cajain">b</div>
