--- a/reservar/index.html
+++ b/reservar/index.html
@@ -28,7 +28,25 @@
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
 
+    <section class="reservas">
 
+        <div class="eventos">
+            <h1>Reserva tu propio evento de Empresa, con amigos e incluso poder celebrar tu porpio cumpleaños!</h1>
+                <div id="prueba">
+                    <img src="/reservar/reserva.png">
+                    <img src="/reservar/reserva.png">
+                    <img src="/reservar/reserva.png">
+                </div>
+        </div>
+        <div class="tandas">
+            <h1>Reserva tu propio evento de Empresa, con amigos e incluso poder celebrar tu porpio cumpleaños!</h1>
+            <div id="prueba">
+            <img src="/reservar/reserva.png">
+            <img src="/reservar/reserva.png">
+        </div>
+    </div>
+
+    </section>
     <footer>
         <img src="../img/logo2.png">
         <hr>
