Ficha Técnica KArts

--- a/karting/index.html
+++ b/karting/index.html
@@ -74,6 +74,20 @@
             <button class="nav-button next-button">Siguiente</button>
         </nav>
     </section>
+    <section class="karts">
+        <h2 id="karts">Nuestros Karts</h2>
+        <p id="parrafoKarts"><strong>ZoomKarting</strong> cuenta con karts de última generación de la marca <strong>SODIKART</strong>>. 
+        Nuestros karts están montados sobre un motor <strong>Honda de 270cc y 9,5 CV de potencia</strong>,
+         e incluyen toda clase elementos de seguridad.
+        (GPS para registro de cronos, barra anti-vuelco, 
+        cinturón de seguridad tipo reflex, pedales regulables).
+            <br><br>
+        También disponemos de karts para el público más joven, <strong>entre 8 y 14 años</strong>. 
+        Éstos están equipados también con motor Honda, pero de <strong>200cc y 4 CV de potencia</strong> 
+        (altura mínima permitida: 1'30 metros).</p>
+        
+        <h2>Ficha Técnica</h2>
+    </section>
     <footer>
         <img src="../img/logo2.png">
         <hr>
