--- a/log-in/index.html
+++ b/log-in/index.html
@@ -12,17 +12,14 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../img/logo.png" alt="logo" width="10%" height="15%">
+            <img src="../img/logo.png" alt="logo-f1" width="10%" height="15%">
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="/inicio/index.html">Inicio</a></li>
-                <li><a href="/tarifas/index.html">Tarifas</a></li>
-                <li><a href="/horarios/index.html">Horarios</a></li>
-                <li><a href="/karting/index.html">Karting</a></li>
-                <li><a href="/reservar/index.html">Reservar</a></li>
-                <li><a href="/eventos/index.html">Reservar</a></li>
-                <li><a href="/contactanos/index.html">Reservar</a></li>
+                <li><a href="/producto/index.html">Producto</a></li>
+                <li><a href="/DondeEstamos/index.html">Producto</a></li>
+                <li><a href="/contactanos/index.html">contactanos</a></li>
            </ul>             
         </nav>
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
