--- a/inicio/index.html
+++ b/inicio/index.html
@@ -17,12 +17,9 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="/inicio/index.html">Inicio</a></li>
-                <li><a href="/tarifas/index.html">Tarifas</a></li>
-                <li><a href="/horarios/index.html">Horarios</a></li>
-                <li><a href="/karting/index.html">Karting</a></li>
-                <li><a href="/reservar/index.html">Reservar</a></li>
-                <li><a href="/eventos/index.html">Reservar</a></li>
-                <li><a href="/contactanos/index.html">Reservar</a></li>
+                <li><a href="/producto/index.html">Producto</a></li>
+                <li><a href="/DondeEstamos/index.html">Producto</a></li>
+                <li><a href="/contactanos/index.html">contactanos</a></li>
            </ul>             
         </nav>
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
