--- a/inicio/index.html
+++ b/inicio/index.html
@@ -28,7 +28,7 @@
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
 
-
+    <h1>Prueba</h1>
 
     <footer>
         <img src="../img/logo2.png">
