--- a/producto/index.html
+++ b/producto/index.html
@@ -71,20 +71,10 @@
             <button class="nav-button next-button">Siguiente</button>
         </nav>
     </section>
-    <section class="karts">
-        <h2 id="karts">Nuestros Karts</h2>
-        <p id="parrafoKarts"><strong>ZoomKarting</strong> cuenta con karts de última generación de la marca <strong>SODIKART</strong>>. 
-        Nuestros karts están montados sobre un motor <strong>Honda de 270cc y 9,5 CV de potencia</strong>,
-         e incluyen toda clase elementos de seguridad.
-        (GPS para registro de cronos, barra anti-vuelco, 
-        cinturón de seguridad tipo reflex, pedales regulables).
-            <br><br>
-        También disponemos de karts para el público más joven, <strong>entre 8 y 14 años</strong>. 
-        Éstos están equipados también con motor Honda, pero de <strong>200cc y 4 CV de potencia</strong> 
-        (altura mínima permitida: 1'30 metros).</p>
-        
-        <h2>Ficha Técnica</h2>
-    </section>
+    <div class="info">
+        <h2>Productos Karting</h2>
+        <p>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></p>
+    </div>
     <footer>
         <img src="../img/logo2.png">
         <hr>
