--- a/producto/index.html
+++ b/producto/index.html
@@ -9,21 +9,6 @@
     <link  rel="stylesheet" href="../cabecera.css">
     <link  rel="stylesheet" href="style.css">
 </head>
-<style>
-    .contenedor{
-        position: relative;
-        display: inline-block;
-        text-align: center;
-    }
-     
-    
-    .centrado{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    </style>
 <body>
     <header class="header">
         <div class="logo">
@@ -75,6 +60,27 @@
         <h2>Productos Karting</h2>
         <p>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></p>
     </div>
+    <main>
+        <div class="productos">
+            <h2>CHASIS</h2>
+            <img src="img/chasis.webp" alt="barein">
+        </div>
+
+        <div class="productos">
+            <h2>PIEZAS</h2>
+            <img src="img/partes.webp" alt="arabia">
+        </div>
+
+        <div class="productos">
+            <h2>CASCOS, GUANTES...</h2>
+            <img src="img/complementos.jpg" alt="australia">
+        </div>
+
+        <div class="productos">
+            <h2>MONOS</h2>
+            <img src="img/mono.png+" alt="australia">
+        </div>
+    </main>
     <footer>
         <img src="../img/logo2.png">
         <hr>
