--- a/producto/index.html
+++ b/producto/index.html
@@ -27,7 +27,7 @@
 
     <div class="info">
         <h2>Circuitos Karting</h2>
-        <p>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></p>
+        <span>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></span>
     </div>
     <section class="circuitos">
         <h2>Echa un vistazo a nuestros centros de Karting y sus trazados!</h2>
@@ -43,11 +43,11 @@
                 <figcaption>Trazado de Las Rozas</figcaption>
             </figure>
             <figure class="carrusel-item">
-                <img src="img/MadridOutdoor.png" alt="Imagen 2">
+                <img src="img/MadridOutdoor.png" alt="MadridOut">
                 <figcaption>Trazado de Madrid - La Ermita OutDoor</figcaption>
             </figure>
             <figure class="carrusel-item">
-                <img src="img/MadridOutdoor.png" alt="Imagen 3">
+                <img src="img/MadridOutdoor.png" alt="MadridIn">
                 <figcaption>Trazado de Madrid - La Ermita InDoor</figcaption>
             </figure>
         </div>
@@ -58,31 +58,31 @@
     </section>
     <div class="info">
         <h2>Productos Karting</h2>
-        <p>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></p>
+        <span>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></span>
     </div>
     <main>
         <div class="productos">
             <h2>CHASIS</h2>
-            <img src="img/chasis.webp" alt="barein">
+            <img src="img/chasis.webp" alt="Chasis">
         </div>
 
         <div class="productos">
             <h2>PIEZAS</h2>
-            <img src="img/partes.webp" alt="arabia">
+            <img src="img/partes.webp" alt="Partes">
         </div>
 
         <div class="productos">
             <h2>CASCOS, GUANTES...</h2>
-            <img src="img/complementos.jpg" alt="australia">
+            <img src="img/complementos.jpg" alt="Complementos">
         </div>
 
         <div class="productos">
             <h2>MONOS</h2>
-            <img src="img/mono.png+" alt="australia">
+            <img src="img/mono.png" alt="Mono">
         </div>
     </main>
     <footer>
-        <img src="../img/logo2.png">
+        <img src="../img/logo2.png" alt="logo">
         <hr>
         <div class="cuerpo">
             <div id="RS">
