--- a/producto/index.html
+++ b/producto/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="productos">
-            <h2>CASCOS, GUANTES...</h2>
+            <h2>EQUIPAMIENTO</h2>
             <img src="img/complementos.jpg" alt="Complementos">
         </div>
 
