--- a/producto/index.html
+++ b/producto/index.html
@@ -24,6 +24,7 @@
         </nav>
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
+    <main>
 
     <div class="info">
         <h2>Circuitos Karting</h2>
@@ -32,8 +33,12 @@
     <section class="circuitos">
         <h2>Echa un vistazo a nuestros centros de Karting y sus trazados!</h2>
         <div class="pistas">
-            <img src="img/LasRozas.png"  alt="Las Rozas" >
-            <img src="img/Madrid.png"  alt="Madrid">
+                <div id="Rozas">
+                    <span>Las Rozas</span>
+                </div>         
+                <div id="Madrid">
+                    <span>La Ermita</span>
+                </div>  
         </div>
     </section>
     <section id="carrusel">
@@ -60,7 +65,7 @@
         <h2>Productos Karting</h2>
         <span>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></span>
     </div>
-    <main>
+    <section class="venta">
         <div class="productos">
             <h2>CHASIS</h2>
             <img src="img/chasis.webp" alt="Chasis">
@@ -80,6 +85,7 @@
             <h2>MONOS</h2>
             <img src="img/mono.png" alt="Mono">
         </div>
+    </section>
     </main>
     <footer>
         <img src="../img/logo2.png" alt="logo">
