--- a/producto/index.html
+++ b/producto/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../img/logo.png" alt="logo-f1" width="10%" height="15%">
+            <img src="../img/logo.png" alt="logo-ZoomKarting" width="10%" height="15%">
         </div>
         <nav>
             <ul class="nav-links">
@@ -30,6 +30,7 @@
         <h2>Circuitos Karting</h2>
         <span>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></span>
     </div>
+        <!-- Los circuitos que se pueden ir a probar karts de alquiler -->
     <section class="circuitos">
         <h2>Echa un vistazo a nuestros centros de Karting y sus trazados!</h2>
         <div class="pistas">
@@ -41,6 +42,7 @@
                 </div>  
         </div>
     </section>
+        <!-- Carrusel de fotos con los trazados de los circuitos -->
     <section id="carrusel">
         <div class="carruselContainer">
             <figure class="carrusel-item">
@@ -65,24 +67,25 @@
         <h2>Productos Karting</h2>
         <span>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></span>
     </div>
+    <!-- 4 tarjetas cada una para separar nuestros productos de venta al público-->
     <section class="venta">
         <div class="productos">
-            <h2>CHASIS</h2>
+            <a href="productos/chasis.html"><h2>CHASIS</h2></a>
             <img src="img/chasis.webp" alt="Chasis">
         </div>
 
         <div class="productos">
-            <h2>PIEZAS</h2>
-            <img src="img/partes.webp" alt="Partes">
+            <a href="productos/chasis.html"><h2>PIEZAS</h2></a>
+            <img src="img/partes.webp" alt="Piezas">
         </div>
 
         <div class="productos">
-            <h2>EQUIPAMIENTO</h2>
+            <a href="productos/chasis.html"><h2>EQUIPAMIENTO</h2></a>
             <img src="img/complementos.jpg" alt="Complementos">
         </div>
 
         <div class="productos">
-            <h2>MONOS</h2>
+            <a href="productos/chasis.html"><h2>MONO</h2></a>
             <img src="img/mono.png" alt="Mono">
         </div>
     </section>
