--- a/producto/index.html
+++ b/producto/index.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="/inicio/index.html">Inicio</a></li>
                 <li><a href="/producto/index.html">Producto</a></li>
-                <li><a href="/DondeEstamos/index.html">Producto</a></li>
+                <li><a href="/DondeEstamos/index.html">Donde Estamos?</a></li>
                 <li><a href="/contactanos/index.html">contactanos</a></li>
            </ul>             
         </nav>
@@ -46,15 +46,15 @@
     <section id="carrusel">
         <div class="carruselContainer">
             <figure class="carrusel-item">
-                <img src="img/RozasTrazado.png" alt="LasRozas">
+                <img src="img/RozasTrazado.webp" alt="LasRozas">
                 <figcaption>Trazado de Las Rozas</figcaption>
             </figure>
             <figure class="carrusel-item">
-                <img src="img/MadridOutdoor.png" alt="MadridOut">
+                <img src="img/MadridOutdoor.webp" alt="MadridOut">
                 <figcaption>Trazado de Madrid - La Ermita OutDoor</figcaption>
             </figure>
             <figure class="carrusel-item">
-                <img src="img/MadridOutdoor.png" alt="MadridIn">
+                <img src="img/MadridOutdoor.webp" alt="MadridIn">
                 <figcaption>Trazado de Madrid - La Ermita InDoor</figcaption>
             </figure>
         </div>
@@ -65,28 +65,28 @@
     </section>
     <div class="info">
         <h2>Productos Karting</h2>
-        <span>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></span>
+        <span>Montar en un Kart no es tarea sencilla pero nosotros te ofrecemos todo nuestro catalogo de productos para que no pares de correr!</span>
     </div>
     <!-- 4 tarjetas cada una para separar nuestros productos de venta al público-->
     <section class="venta">
         <div class="productos">
-            <a href="productos/chasis.html"><h2>CHASIS</h2></a>
-            <img src="img/chasis.webp" alt="Chasis">
+            <a href="productos/chasis.html"><h2>KARTS</h2></a>
+            <img src="img/kart.webp" alt="kart">
         </div>
 
         <div class="productos">
-            <a href="productos/chasis.html"><h2>PIEZAS</h2></a>
-            <img src="img/partes.webp" alt="Piezas">
+            <a href="productos/piezas.html"><h2>PIEZAS</h2></a>
+            <img src="img/piezas.webp" alt="Piezas">
         </div>
 
         <div class="productos">
-            <a href="productos/chasis.html"><h2>EQUIPAMIENTO</h2></a>
-            <img src="img/complementos.jpg" alt="Complementos">
+            <a href="productos/equipamiento.html"><h2>EQUIPAMIENTO</h2></a>
+            <img src="img/equipamiento.webp" alt="Equipamiento">
         </div>
 
         <div class="productos">
-            <a href="productos/chasis.html"><h2>MONO</h2></a>
-            <img src="img/mono.png" alt="Mono">
+            <a href="productos/monos.html"><h2>MONOS</h2></a>
+            <img src="img/mono.webp" alt="Mono">
         </div>
     </section>
     </main>
