--- a/producto/productos/chasis.html
+++ b/producto/productos/chasis.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="/inicio/index.html">Inicio</a></li>
                 <li><a href="/producto/index.html">Producto</a></li>
-                <li><a href="/DondeEstamos/index.html">Producto</a></li>
+                <li><a href="/DondeEstamos/index.html">Donde Estamos?</a></li>
                 <li><a href="/contactanos/index.html">contactanos</a></li>
            </ul>             
         </nav>
@@ -27,51 +27,61 @@
     <main>
 
     <div class="intro">
-        <h2>CHASIS</h2>
-        <span>Como cualquier piloto competitivo se busca la mejor aerodinamica y el menor peso posible para nuestro Go Kart y poder quedar primero en las carreras!</span>
+        <h2>Karts</h2>
+        <span>Os presentamos nuestros catalogo de Karts para este 2024, dirigdo tanto para pilotos competitivos, empresarios o la gran implementación de los Karts-E</span>
     </div>
     <div class="info">
-        <h2>CHASIS COMPETITIVOS</h2>
-        <span>Se el mas rápido de tus rivales con nuestros chasis de fibra de carbono y la mejor aerodinamica, todos ellos probados en nuestros tuneles de viento de ultima generación</span>
+        <h2>KARTS COMPETITIVOS</h2>
+        <span>Se el mas rápido de tus rivales con nuestros karts echos conla mejor aerodinamica, el menor peso posible y sobretodo la mayor potencia para nuestro Go Kart</span>
     </div>
     <section class="competitivo">
         <div class="tarjeta">
-            <img src="img/thunder.png" alt="thunder">
+            <img src="img/thunder.webp" alt="thunder">
+            <div class="contenido">
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
         </div>
         <div class="tarjeta">
-            <img src="img/phoenix.png" alt="phoenix">
+            <img src="img/phoenix.webp" alt="phoenix">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         </div>
         <div class="tarjeta">
-            <img src="img/star-cadete.png" alt="star-cadete">
+            <img src="img/star-cadete.webp" alt="star-cadete">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         </div>
     </section>
 
     <div class="info">
-        <h2>CHASIS ALQUILER</h2>
-        <span>Se el mas rápido de tus rivales con nuestros chasis de fibra de carbono y la mejor aerodinamica, todos ellos probados en nuestros tuneles de viento de ultima generación</span>
+        <h2>KARTS ALQUILER</h2>
+        <span>Lo tuyo no es competir y es emprender? Nosotros te ayudamos con esta amplica selección de karts de alquiler para todos los publicos!</span>
     </div>
     <section class="competitivo">
         <div class="tarjeta">
-            <img src="img/kr3.png" alt="kr3">
+            <img src="img/kr3.webp" alt="kr3">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         </div>
         <div class="tarjeta">
-            <img src="img/SJ1.png" alt="SJ1">
+            <img src="img/SJ1.webp" alt="SJ1">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         </div>
         <div class="tarjeta">
-            <img src="img/SR3.png" alt="SR3">
+            <img src="img/SR3.webp" alt="SR3">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         </div>
         <div class="tarjeta">
-            <img src="img/twoone.png" alt="twoone">
+            <img src="img/twoone.webp" alt="twoone">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         </div>
     </section>
 
     <div class="info">
-        <h2>CHASIS COMPETITIVOS</h2>
-        <span>Se el mas rápido de tus rivales con nuestros chasis de fibra de carbono y la mejor aerodinamica, todos ellos probados en nuestros tuneles de viento de ultima generación</span>
+        <h2>KARTS ELECTRICOS</h2>
+        <span>Los tiempos cambian y nosotros también, asique estamos felices de poder presentar nuestro primer kart 100% electrico para poder contribuir a la Agenda 2030 de la F.I.A.</span>
     </div>
     <section class="competitivo">
         <div class="tarjeta">
-            <img src="img/sr3-e.png" alt="sr3-e">
+            <img src="img/sr3-e.webp" alt="sr3-e">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         </div>
     </section>
     </main>
@@ -92,6 +102,5 @@
                 &emsp;&emsp;Anuncios basados en intereses</p>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
