--- a/contactanos/index.html
+++ b/contactanos/index.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="/inicio/index.html">Inicio</a></li>
                 <li><a href="/producto/index.html">Producto</a></li>
-                <li><a href="/DondeEstamos/index.html">Producto</a></li>
+                <li><a href="/DondeEstamos/index.html">Donde Estamos?</a></li>
                 <li><a href="/contactanos/index.html">contactanos</a></li>
             </ul>             
         </nav>
