--- a/producto/productos/chasis.html
+++ b/producto/productos/chasis.html
@@ -34,7 +34,7 @@
         <h2>KARTS COMPETITIVOS</h2>
         <span>Se el mas rápido de tus rivales con nuestros karts echos conla mejor aerodinamica, el menor peso posible y sobretodo la mayor potencia para nuestro Go Kart</span>
     </div>
-    <section class="competitivo">
+    <section class="tarjetaPadre">
         <div class="tarjeta">
             <img src="img/thunder.webp" alt="thunder">
             <div class="contenido">
@@ -55,7 +55,7 @@
         <h2>KARTS ALQUILER</h2>
         <span>Lo tuyo no es competir y es emprender? Nosotros te ayudamos con esta amplica selección de karts de alquiler para todos los publicos!</span>
     </div>
-    <section class="competitivo">
+    <section class="tarjetaPadre">
         <div class="tarjeta">
             <img src="img/kr3.webp" alt="kr3">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
@@ -78,7 +78,7 @@
         <h2>KARTS ELECTRICOS</h2>
         <span>Los tiempos cambian y nosotros también, asique estamos felices de poder presentar nuestro primer kart 100% electrico para poder contribuir a la Agenda 2030 de la F.I.A.</span>
     </div>
-    <section class="competitivo">
+    <section class="tarjetaPadre">
         <div class="tarjeta">
             <img src="img/sr3-e.webp" alt="sr3-e">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
