--- a/producto/index.html
+++ b/producto/index.html
@@ -70,7 +70,7 @@
     <!-- 4 tarjetas cada una para separar nuestros productos de venta al público-->
     <section class="venta">
         <div class="productos">
-            <a href="productos/chasis.html"><h2>KARTS</h2></a>
+            <a href="productos/kart.html"><h2>KARTS</h2></a>
             <img src="img/kart.webp" alt="kart">
         </div>
 
