--- a/producto/productos/piezas.html
+++ b/producto/productos/piezas.html
@@ -35,55 +35,84 @@
         <span>Se el mas rápido de tus rivales con nuestros karts echos conla mejor aerodinamica, el menor peso posible y sobretodo la mayor potencia para nuestro Go Kart</span>
     </div>
     <section class="tarjetaPadre">
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/chasis.webp" alt="thunder">
             <div class="contenido">
                 <h2>Chasis</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
+            <img src="img/Aleron.webp" alt="morro">
+            <div class="contenido">
+                <h2>Aleron delantero</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <img src="img/Morro.webp" alt="SubidaMorro">
+            <div class="contenido">
+                <h2>Morro</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="tarjeta">
             <img src="img/asiento.webp" alt="thunder">
             <div class="contenido">
                 <h2>Asiento</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/parachoques.webp" alt="thunder">
             <div class="contenido">
                 <h2>Parachoques</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/volante.webp" alt="thunder">
             <div class="contenido">
                 <h2>volante</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
+            <img src="img/montura.webp" alt="montura">
+            <div class="contenido">
+                <h2>Bloque Motor</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="tarjeta">
             <img src="img/ruedas.webp" alt="thunder">
             <div class="contenido">
                 <h2>Ruedas</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/pedales.webp" alt="thunder">
             <div class="contenido">
                 <h2>Pedales</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/shifter.webp" alt="thunder">
             <div class="contenido">
                 <h2>Shifter</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
+        <div class="tarjeta">
+            <img src="img/FuelLine.webp" alt="FuelLine">
+            <div class="contenido">
+                <h2>Línea de Combustible</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>
+
     </section>
 
     <div class="info">
@@ -91,49 +120,70 @@
         <span>Lo tuyo no es competir y es emprender? Nosotros te ayudamos con esta amplica selección de karts de alquiler para todos los publicos!</span>
     </div>
     <section class="tarjetaPadre">
-        <div class="tarjeta2">
+        <div class="tarjeta">
+            <img src="img/escape.webp" alt="piñon">
+            <div class="contenido">
+                <h2>Tubo de Escape</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="tarjeta">
             <img src="img/motor.webp" alt="piñon">
             <div class="contenido">
                 <h2>Motor</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
+            <img src="img/carburador.webp" alt="carburador">
+            <div class="contenido">
+                <h2>carburador</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <img src="img/radial.webp" alt="radial">
+            <div class="contenido">
+                <h2>Radial de Freno</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>  
+        <div class="tarjeta">
             <img src="img/frenos.webp" alt="frenos">
             <div class="contenido">
-                <h2>Frenos</h2>
+                <h2>Discos de Freno</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>        
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/transmision.webp" alt="transmision">
             <div class="contenido">
                 <h2>Transmision</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>        
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/BarraTorsion.webp" alt="BarraTorsion">
             <div class="contenido">
                 <h2>Barra de torsion</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/bujia.webp" alt="piñon">
             <div class="contenido">
                 <h2>Bujia</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/piñon.webp" alt="piñon">
             <div class="contenido">
                 <h2>Piñon</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/eje.webp" alt="piñon">
             <div class="contenido">
                 <h2>Eje de dirección</h2>
@@ -147,42 +197,56 @@
         <span>Los tiempos cambian y nosotros también, asique estamos felices de poder presentar nuestro primer kart 100% electrico para poder contribuir a la Agenda 2030 de la F.I.A.</span>
     </div>
     <section class="tarjetaPadre">
-        <div class="tarjeta2">
+        <div class="tarjeta">
+            <img src="img/display.webp" alt="display">
+            <div class="contenido">
+                <h2>Display</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>  
+        <div class="tarjeta">
             <img src="img/colectorKart.webp" alt="colectorKart">
             <div class="contenido">
                 <h2>Carro colector Kart</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
-        </div>        
-        <div class="tarjeta2">
+        </div>    
+        <div class="tarjeta">
+            <img src="img/tireChanger.webp" alt="tireChanger">
+            <div class="contenido">
+                <h2>Cambiador de neumáticos</h2>
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </div>
+        </div>       
+        <div class="tarjeta">
             <img src="img/pistola.webp" alt="piñon">
             <div class="contenido">
                 <h2>Pistola de Aire</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>        
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/gasolina.webp" alt="piñon">
             <div class="contenido">
                 <h2>Tanque de gasolina</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/aceite.webp" alt="piñon">
             <div class="contenido">
                 <h2>Aceite de motor</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/herramientas.webp" alt="piñon">
             <div class="contenido">
                 <h2>Caja de herramientas</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="tarjeta2">
+        <div class="tarjeta">
             <img src="img/llaveBujia.webp" alt="piñon">
             <div class="contenido">
                 <h2>Llave de Bujia</h2>
