--- a/inicio/index.html
+++ b/inicio/index.html
@@ -25,7 +25,19 @@
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
 
-    <h1>Prueba</h1>
+    <section class="inicio" id="inicio">  
+        <div class="content">
+            <h1>ZOOMKARTING</h1>
+            <h2>CIRCUITO DE KARTS EN MADRID</h2>
+            <p>El mejor Kating en Madrid para disfrutar de la velociad. Ponemos a tu disposición nuestras instalaciones para celebraciones de empresa y familia, servicios de restauración para que puedas combinar ocio y trabajo.</p>
+            <a class="heading" href="../contactanos/index.html">¡Solicita información!</a>
+        </div>
+    
+        <video onloadedmetadata="this.muted=true" autoplay loop>
+            <source src="img/video.mp4">           
+        </video>
+
+    </section>
 
     <footer>
         <img src="/img/logo2.png" alt="logo">
